--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,12 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    "useDefineForClassFields": false,
+    "baseUrl": ".",
+    "paths": {
+      "@st/core": ["src/app/core/index.ts"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
