--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@angular-devkit/build-angular": "^18.2.7",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/hammerjs": "^2.0.45",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.3.1",
     "eslint": "^9.9.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
